objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Access_DB_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Access DB External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Name1_Report__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Report__c</fullName>
        <formula>AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Date__c</fullName>
        <description>Agent Activation date - Start Date</description>
        <formula>Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <formula>Agent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <description>Agent full name</description>
        <formula>FirstName  &amp; &quot; &quot; &amp;  MiddleName &amp; &quot; &quot; &amp;  LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>$CustomMetadata.License_Price__mdt.Agent_New.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CDFA_User_Status__c</fullName>
        <label>CDFA User Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <description>End date : Day on which contact becomes inactive</description>
        <formula>End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exam_Score__c</fullName>
        <label>Exam Score</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Examination_Date__c</fullName>
        <label>Examination Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Examination_Type__c</fullName>
        <label>Examination Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exp_Date__c</fullName>
        <description>License expiry date</description>
        <formula>License_To_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Identity_No__c</fullName>
        <label>Identity No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsReviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsReviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Current_Logged_In_User_Contact__c</fullName>
        <formula>IF(Id == $User.ContactId , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current Logged In User Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Reviewed_Date__c</fullName>
        <label>Last Reviewed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>License_From_Date__c</fullName>
        <label>License From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_No__c</fullName>
        <label>License No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_To_Date__c</fullName>
        <label>License To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Payment_Statu__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proof_Of_Identity__c</fullName>
        <label>Proof Of Identity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Mailing State</description>
        <formula>MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>correlationID__c</fullName>
        <label>correlationID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>relatedAccountsCount__c</fullName>
        <label>relatedAccountsCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CDFA_User_Status__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CONTACT.EMAIL_BOUNCED_DATE</columns>
        <columns>CONTACT.MIDDLE_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Agents</fullName>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.MIDDLE_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CDFA_User_Status__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Proof_Of_Identity__c</columns>
        <columns>Identity_No__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>License_No__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>License_To_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.RSAAgent</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>New Agent</value>
        </filters>
        <label>All Agents</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>RSA_Contacts</fullName>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CDFA_User_Status__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.RSAContact</value>
        </filters>
        <label>RSA Contacts</label>
    </listViews>
    <listViews>
        <fullName>RSA_Team_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CDFA_User_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>marc,Anirudh,Madhukar,Rebecca,Darcy,Analiza</value>
        </filters>
        <label>RSA Team Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>PSP</fullName>
        <active>true</active>
        <description>All contacts that are related to produce farms, suppliers, harversters or universities part of the TAPs work</description>
        <label>PSP</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSAAgent</fullName>
        <active>true</active>
        <label>RSAAgent</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSAContact</fullName>
        <active>true</active>
        <label>RSAContact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Review_Examinee</fullName>
        <active>true</active>
        <description>This record type is used as a place holder for new contacts until the contact record is reviewed</description>
        <label>Review Examinee</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>